tests/fixtures/negative/53_vec_capacity_type_failure.yc
fn main() {
    values := Vec<i32>{capacity: "invalid"}
}
